# xero-rs

./: Cargo.toml  README.md
examples/: contacts.rs
src/: application.rs  client.rs  encoding.rs  error.rs  lib.rs  oauth.rs
src/resources/: contacts.rs  invoices.rs  items.rs  mod.rs  payments.rs
tests/: encoding.rs
